Course Section is improved

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Turgut Ozal Guvenc</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="assets/turgut-modified.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/turgut_circled.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
       rel="stylesheet"
